--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,13 +7,11 @@ a {
   color: #0027CF;
 }
 
-.divForm
+.divInput
 {
     background-color: #f0f0f0;
-    margin-left: 80px;
-    padding: 10px;
-    width: 600px;
 }
+
 .searchInput
 {
     max-width: 120px;
