change isbn to barcode

--- a/views/booklist.jade
+++ b/views/booklist.jade
@@ -41,7 +41,7 @@ block content
             th= resources.bookname
             th= resources.bookseries
             th= resources.bookauthor
-            th= resources.isbn
+            th= resources.barcode
             th= resources.bookowner
             th= resources.bookcreate
             th= resources.bookstatus
@@ -53,7 +53,7 @@ block content
                 td= book.name
                 td= book.series
                 td= book.author
-                td= book.isbn
+                td= book.barcode
                 td= book.owner
                 td= book.createdate
                 td
