--- a/views/addbook.jade
+++ b/views/addbook.jade
@@ -1,4 +1,4 @@
-extend layout
+extends layout
 
 block script
     script(type="text/javascript").
@@ -37,10 +37,10 @@ block script
         });
         
 block content
-    div.divInput(style="margin-left:100px;padding:30px;width:300px")
+    div.divInput(style="margin-left:100px;padding:20px;width:300px")
         form(id="frmAdd" method="post" action="/add")
             input(type="hidden" id="continue" name="continue" value="no")
-            table
+            table(align="center")
                 tr
                     td 
                         label(for="name")= resources.bookname
@@ -72,7 +72,13 @@ block content
                     td
                         select(id="owner" name="owner")
                             each user in users
-                                option(value="#{user.id}")= user.fullname
+                                - if (user.id == currUser.id)
+                                    option(value="#{user.id}"
+                                           selected="selected")= user.fullname
+                                - else
+                                    option(value="#{user.id}")= user.fullname
+                tr
+                    td(colspan="3")
                 tr
                     td(align="right" colspan="2")
                         input(type="submit" value="#{resources.ok}")
