--- a/public/css/style.css
+++ b/public/css/style.css
@@ -41,3 +41,23 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Futura-CondensedExtraBold', 'Futura', 'Helvetica', sans-serif;
   text-transform: uppercase;
 }
+
+table {
+    margin-top: 20px;
+}
+
+th {
+    padding-top : 8px;
+    padding-bottom: 8px;
+    padding-left: 4px;
+    padding-right: 4px;
+    white-space: nowrap;
+}
+
+td {
+    padding-left: 5px;
+    padding-top : 4px;
+    padding-right: 5px;
+    padding-bottom : 4px;
+    white-space: nowrap;
+}
